Fixed #urlbar-protocol not hiding itself when text is overflowing in the left, and both left and right sides

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbar-searchbar.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbar-searchbar.scss
@@ -147,6 +147,13 @@
 		}
 	}
 
+	&[textoverflow="left"],
+	&[textoverflow="both"] {
+		#urlbar-protocol {
+			display: none !important;
+		}
+	}
+
 	&:not([pageproxystate="valid"], [open]) {
 		#urlbar-protocol {
 			display: none !important;
@@ -271,7 +278,8 @@
 	}
 
 	&[securestate="secure"],
-	&[securestate="ev"] {
+	&[securestate="ev"],
+	.verifiedDomain ~ .urlbar-input-box {
 		--toolbar-field-background-color: var(--urlbar-background-verified-proxystate-valid);
 		--protocol-color: var(--urlbar-verified-proxystate-valid);
 		--protocol-background-color: var(--urlbar-background-verified-proxystate-valid);
